@@ -1342,10 +1342,14 @@ int WINAPI WinMain(HINSTANCE hInst, HINSTANCE hPrevInst, LPSTR lpCmdLine, int nS
     WgxSetDbgPrintHandler(udefrag_dbg_print);
     hInstance = GetModuleHandle(NULL);
     
+    /* show crash info when the program crashed last time */
+    StartCrashInfoCheck();
+    
     /* handle initialization failure */
     if(udefrag_init_failed()){
         MessageBoxA(NULL,"Send bug report to the authors please.",
             "UltraDefrag initialization failed!",MB_OK | MB_ICONHAND);
+        StopCrashInfoCheck();
         return 1;
     }
     
@@ -1361,6 +1365,7 @@ int WINAPI WinMain(HINSTANCE hInst, HINSTANCE hPrevInst, LPSTR lpCmdLine, int nS
     
     if(InitSynchObjects() < 0){
         DeleteEnvironmentVariables();
+        StopCrashInfoCheck();
         return 1;
     }
 
@@ -1394,6 +1399,7 @@ int WINAPI WinMain(HINSTANCE hInst, HINSTANCE hPrevInst, LPSTR lpCmdLine, int nS
             SendMessage(hWindow,WM_DESTROY,0,0);
         }
         DestroySynchObjects();
+        StopCrashInfoCheck();
         return 3;
     }
 
@@ -1410,6 +1416,7 @@ int WINAPI WinMain(HINSTANCE hInst, HINSTANCE hPrevInst, LPSTR lpCmdLine, int nS
     SavePrefs();
     DeleteEnvironmentVariables();
     stop_web_statistics();
+    StopCrashInfoCheck();
     
     if(shutdown_requested){
         result = ShutdownOrHibernate();
